EME: Close existing sessions on CDM failure

When the CDM crashes, any existing open sessions should be closed.

BUG=652856
TEST=new EME tests pass

Review-Url: https://codereview.chromium.org/2426813002
Cr-Commit-Position: refs/heads/master@{#432327}

Former-commit-id: 35c1aa881f655468ebafcf68e51ae2180f67a833