media/test/data/eme_player_js/clearkey_player.js
@@ -27,7 +27,7 @@ ClearKeyPlayer.prototype.onMessage = function(message) {
   message.target.update(jwkSet).catch(function(error) {
     // Ignore the error if a crash is expected. This ensures that the decoder
     // actually detects and reports the error.
-    if (this.testConfig.keySystem != 'org.chromium.externalclearkey.crash') {
+    if (this.testConfig.keySystem != CRASH_TEST_KEYSYSTEM) {
       Utils.failTest(error, EME_UPDATE_FAILED);
     }
   });
